...
fun ArtistListElement(artist: Artist, onClick: () -> Unit) {
    Row(
        modifier = Modifier
            .fillMaxWidth()
            .clickable(onClick = onClick)
            .heightIn(min = 104.dp)
            .testTag("artist-item")
            .padding(horizontal = 20.dp, vertical = 10.dp),
        verticalAlignment = Alignment.CenterVertically
    ) {
        val imageUrl = artist.image.let {
            if (it.startsWith("http://")) it.replace("http://", "https://") else it
        }.ifEmpty { null }
...
                modifier = Modifier.testTag("artist-name")
            )
            TextButton(
                onClick = onClick,
                modifier = Modifier
                    .padding(top = 4.dp)
                    .testTag("artist-detail-button")
            ) {
                Text(text = "Ver detalle")
            }
        }
    }
}
...
